Added middle section text and styling

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
       <!-- Middle Section -->
       <div class="middle">
         <div class="middle-text-content">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
         </div>
 
         <div class="middle-img-content">
@@ -54,7 +56,7 @@
           <div class="image">
           </div>
         </div>
-        
+
       </div>
       <!-- Middle end -->
 
