Added images and more content to middle section

--- a/index.html
+++ b/index.html
@@ -42,18 +42,28 @@
 
         <div class="middle-img-content">
           <div class="image">
+            <img src="./resources/images/img-berryblitz.jpg" alt="small pan with berries."/>
+            <h4>Fall Berry Blits Tea</h4>
           </div>
 
           <div class="image">
+            <img src="./resources/images/img-spiced-rum.jpg" alt="A box of rum with the text 'It pays to buy good tea'."/>
+            <h4>Spiced Rum Tea</h4>
           </div>
 
           <div class="image">
+            <img src="./resources/images/img-donut.jpg" alt="A donut on a tray."/>
+            <h4>Seasonal Donuts</h4>
           </div>
 
           <div class="image">
+            <img src="./resources/images/img-myrtle-ave.jpg" alt="A cup of tea sitting on a coaster"/>
+            <h4>Myrtle Ave Tea</h4>
           </div>
 
           <div class="image">
+            <img src="./resources/images/img-bedford-bizarre.jpg" alt="A cup of tea sitting next to a cup of cream"/>
+            <h4>Bedford Bizarre Tea</h4>
           </div>
         </div>
 
