Added content and images to bottom section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,32 @@
 
       <!-- Bottom Section -->
       <div class="bottom">
+        <div class="bottom-text-content">
+          <h2>Locations</h2>
+        </div>
+
+        <div class="bottom-locations">
+          <div class="box">
+            <h3>Downtown</h3>
+            <p>384 West 4th St</p>
+            <p>Suite 108</p>
+            <p>Portland, Maine</p>
+          </div>
+
+          <div class="box">
+            <h3></h3>
+            <p></p>
+            <p></p>
+            <p></p>
+          </div>
+
+          <div class="box">
+            <h3></h3>
+            <p></p>
+            <p></p>
+            <p></p>
+          </div>
+        </div>
       </div>
       <!-- Bottom end -->
 
