Added more content to bottom added footer and contact sections

--- a/index.html
+++ b/index.html
@@ -85,17 +85,17 @@
           </div>
 
           <div class="box">
-            <h3></h3>
-            <p></p>
-            <p></p>
-            <p></p>
+            <h3>East Bayside</h3>
+            <p>3433 Phisherman's Avenue</p>
+            <p>(Northwest Corner)</p>
+            <p>Portland, Maine</p>
           </div>
 
           <div class="box">
-            <h3></h3>
-            <p></p>
-            <p></p>
-            <p></p>
+            <h3>Oakdale</h3>
+            <p>515 Crescent Avenue</p>
+            <p>Second Floor</p>
+            <p>Portland, Maine</p>
           </div>
         </div>
       </div>
@@ -103,8 +103,17 @@
 
       <!-- Footer Section -->
       <div class="footer">
+        <div class="footer-text-content">
+          <h2>The Tea Cozy</h2>
+          <h5>contact@theteacozy.com</h5>
+          <h5>917-555-8904</h5>
+        </div>
       </div>
       <!-- Footer end -->
+
+      <!-- Copyright -->
+      <h5 class="copyright">copyright The Tea Cozy 2017</h5>
+      <!-- Copyright end -->
     </div>
   </body>
 </html>
